<resources>
    <string name="app_name">ReLoop</string>
    <string name="continue_btn_login">Continue</string>
    <string name="phone_number">Mobile Number</string>
    <string name="enter_email_err_msg">Enter Email Address</string>
    <string name="email_length_err_msg">Email is Not Valid</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="logoutAlerMsg">Logout</string>
    <string name="timeout">TimeOut</string>
    <string name="connectException">Connection Exception</string>
    <string name="invalid_data">Invalid Data</string>
    <string name="no_internet">No Internet</string>
    <string name="ssl">SSL</string>
    <string name="text_somethingwentwrong">Something Went Wrong</string>
    <string name="title_home">Recycle</string>
    <string name="title_shop">Store</string>
    <string name="settings">Settings</string>
    <string name="reports">Reports</string>
    <string name="rewards">Rewards</string>
    <string name="this_feature_is_under_development">This Feature is Under Development</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="redeem">Redeem</string>
    <string name="recycle">Recycle Now</string>
    <string name="track_request">Track Request</string>
    <string name="reloop_points">Total Recycled (kg)</string>
    <string name="buy_now">Buy Now</string>
    <string name="renewable_subscription">Renewable Subscriptions</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="one_time_service">One Time Service</string>
    <string name="recycling_boxes">Recycling Boxes</string>
    <string name="environmental_products">Environmental Products</string>
    <string name="feature_under_development">Feature is Under Development</string>
    <string name="let_s_get_started">Let\'s Get Started</string>
    <string name="create_an_account">Create a ReLoop Account</string>
    <string name="household">Household</string>
    <string name="organization">Organization</string>
    <string name="organization_optional">Organization (optional)</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="address">Address</string>
    <string name="addresses">Addresses</string>
    <string name="no_of_employees">No. of Employees</string>
    <string name="branches">No of Branches</string>
    <string name="cities_operating_in">Cities Operating in</string>
    <string name="create">Create</string>
    <string name="login_with_otp">Login with</string>
    <string name="i_am_already_a_member">I already have an account.&#x20;</string>
    <string name="login">&#x20; Login</string>
    <string name="welcome">Welcome</string>
    <string name="proceed_with_your_login">Proceed with your Login</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="dont_have_a_account">Don\'t Have an Account? </string>
    <string name="signup">Signup</string>
    <string name="select_categories">Select\nCategories</string>
    <string name="schedule_day">Schedule\nDay</string>
    <string name="confirm_collection">Confirm\nCollection</string>
    <string name="request_submitted">Request\nSubmitted</string>
    <string name="electronics">Electronics</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="paper_cardboard">Paper/Cardboard</string>
    <string name="plastics">Plastics</string>
    <string name="metals">Metals</string>
    <string name="glass">Glass</string>
    <string name="clothes">Clothes</string>
    <string name="dummy_text">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore  veritatis et quasi architecto beatae vitae dicta sunt explicabo.Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore  veritatis et quasi architecto beatae vitae dicta sunt explicabo.</string>
    <string name="confirm_text">I confirm complying with the Terms &amp; Conditions.</string>
    <string name="close">Close</string>
    <string name="thank_you">Thank You!</string>
    <string name="collection_submitted">Your collection request has been submitted successfully.</string>
    <string name="order_submitted">Your Order Id Is </string>
    <string name="accept_payment">Accept Payment</string>
    <string name="please_enter_following_information_to_proceed_your_subscription">Please enter following information to proceed your subscription</string>
    <string name="card_number">Card Number</string>
    <string name="card_holder">Card Holder</string>
    <string name="card_holder_optional">Card Holder (optional)</string>
    <string name="mm_yy">Expiry mm/yy</string>
    <string name="cvv">CVV</string>
    <string name="cancel">Cancel</string>
    <string name="name">Name:</string>
    <string name="category">Category:</string>
    <string name="description">Description:</string>
    <string name="city">City</string>
    <string name="city_">City*</string>
    <string name="title_">Location Title/Name*</string>
    <string name="street">Street/Cluster</string>
    <string name="street_">Street/Cluster*</string>
    <string name="district">District</string>
    <string name="district_">District*</string>
    <string name="location">Location:</string>
    <string name="dummy_address">Brooklyn Street 77, New York 2345, New York.</string>
    <string name="txt_update">Update</string>
    <string name="proceed">Proceed</string>
    <string name="cart_information">Cart Information</string>
    <string name="billing">Billing</string>
    <string name="confirmation">Confirmation</string>
    <string name="pay50">Pay $50.00</string>
    <string name="track_order">Track Order</string>
    <string name="discount_coupon">Discount Coupon</string>
    <string name="apply">Apply</string>
    <string name="total_price">Total Price</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="accounts">ACCOUNTS</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change Password</string>
    <string name="pages">PAGES</string>
    <string name="subscription">Subscription</string>
    <string name="order_history">Order History</string>
    <string name="about_reloop">About ReLoop</string>
    <string name="logout">Logout</string>
    <string name="view_receipt">View Receipt</string>
    <string name="term_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="dummy_question">1- Lorem ipsum dolor sit amet, consectetur?</string>
    <string name="dummy_question2">2- Lorem ipsum dolor sit amet, consectetur?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="organization_name">Organization Name</string>
    <string name="enter_redeem_points">Enter points to redeem</string>
    <string name="text_about_reloop">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using \'Content here, content here\', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for \'lorem ipsum\' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</string>
    <string name="your_order_should_be_at_your_place_in">Your order should be at your place in</string>
    <string name="contact_us">Contact Us</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_subject">Enter Subject</string>
    <string name="enter_description">Enter Description</string>
    <string name="submit">Submit</string>
    <string name="donations">DONATIONS</string>
    <string name="download">Download</string>
    <string name="today">Today</string>
    <string name="donate_1000_points">Donate 1000 Points</string>
    <string name="donate_2000_points">Donate 2000 Points</string>
    <string name="subscription_activated">Your subscription has been activated successfully</string>
    <string name="subscription_id_message">Your Subscription Number is</string>
    <string name="profile">Profile</string>
    <string name="name_heading">Name</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_organization">Enter Organization</string>
    <string name="email">Email</string>
    <string name="enter_address">Enter Address</string>
    <string name="save">Save</string>
    <string name="location_">Location</string>
    <string name="location__">Location*</string>
    <string name="cities">Cities</string>
    <string name="enter_location">Address Location</string>
    <string name="dummy_district">Dummy District</string>
    <string name="villa">Villa</string>
    <string name="apartment">Apartment</string>
    <string name="villa_apartment">Villa/Apartment</string>
    <string name="no_of_bedrooms">No. of Bedrooms</string>
    <string name="no_of_bedrooms_">No. of Bedrooms*</string>
    <string name="no_of_occupants">No. of Occupants</string>
    <string name="no_of_occupants_">No. of Occupants*</string>
    <string name="no_of_floors">Floor No.</string>
    <string name="no_of_floors_">Floor No.*</string>
    <string name="unit">Unit</string>
    <string name="no_of_branches">No. of Branches</string>
    <string name="sector">Sector</string>
    <string name="request">Request</string>
    <string name="proceed_with_your">Proceed With Your</string>
    <string name="order_number_is">Your Order Number is</string>
    <string name="unit_number">Unit No.</string>
    <string name="unit_number_">Unit No.*</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="password_err_msg">Enter Password</string>
    <string name="add_address">Add Address</string>
    <string name="title_activity_maps">Map</string>
    <string name="gps_network_not_enabled">GPS is Not Enabled</string>
    <string name="open_location_settings">Go to Location Setting</string>
    <string name="my_account">My Account</string>
    <string name="my_activity">My Activity</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="requests">Requests</string>
    <string name="support">Support</string>
    <string name="rewards_history">Rewards History</string>
    <string name="all_prices_are_inclusive_of_5_vat_taxes">All prices are inclusive of 5% VAT</string>
    <string name="campaigns">Campaigns</string>
    <string name="no_orders">No Record Found!</string>
    <string name="payment_methods">Payment Methods</string>
</resources>